# mlops

./: Dockerfile  Dockerfile1  Makefile  README.md  client.py  convert_to_tensorrt.sh  docker-compose.yaml  dvc.yaml  flops_report.txt  perf.py  pyproject.toml  requirements.txt  setup.py  setup.sh  train.py
.dvc/: config
TraceOfMatrix/: __init__.py
TraceOfMatrix/python/: README.md
TraceOfMatrix/src/: trace_of_matrix.h
TraceOfMatrix/tests/: test_trace.cpp
conf/: config.yaml
conf/model/: model.yaml
lightning_modules/: convert_to_tensorrt.sh  data_module.py  model.py
models/: torch2onnx.py
models/tokenizer/: tokenizer.json  tokenizer_config.json
perf_analyzer/: best.txt  fp16.txt  fp32.txt  int8.txt  onnx.txt
traceofmatrix/python/: binding.cpp
traceofmatrix/src/: trace_of_matrix.cpp
triton/model_repository/ensemble/: config.pbtxt
triton/model_repository/model_ONNX/1/: config.pbtxt
triton/model_repository/model_TRT_BEST/: config.pbtxt
triton/model_repository/model_TRT_FP16/: config.pbtxt
triton/model_repository/model_TRT_FP32/: config.pbtxt
triton/model_repository/model_TRT_INT8/: config.pbtxt
